--- a/puppies.html
+++ b/puppies.html
@@ -11,8 +11,8 @@
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
     <title>LaBear | Designer French Bulldogs</title>
-    <meta name="keywords" content="French Bulldog Puppies">
-    <meta name="description" content="Our newest litters of amazingly awesome French Bulldog Puppies are selling out fast!">
+    <meta name="keywords" content="French Bulldog Puppies Exotic Colors">
+    <meta name="description" content="Our newest litters of French Bulldog Puppies are here! Blue and tan, black and tan and sable still available in this litter.">
 </head>
 
 <body>
@@ -38,100 +38,155 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">Puppies</h1>
-                    <p class="lead">Our stunning new French Bulldog Puppies were born just before Thanksgiving'21. We no longer have puppies available as of 3/13/22 from these 4 litters. Elvira is due on March 22 and Olga is due first week of April, so check back soon!</p>
+                    <p class="lead"> Elvira welped a litter of three pups late March, and Olga had five two weeks later. As usual, all three females were reserved the day they were born. Of the five males, only three are left. 
+                       </p> Olivia, Fraulein and Borgia have dates with our stud, Jerbear, this week, making the new litters due at the end of June.</p>
                 </div>
-                <div class="card"><img src="images/puppies/wintson 3.jpg" alt="litter of pups">
+                <div class="card"><img src="images/pups04/AprilPups-14.jpg" alt="litter of pups">
                 </div>
             </div>
 
         </section>
 
         <!-- Sub head -->
+        <section class="showcase">
+            <div class="container grid">
+                <div class="showcase-text">
+                    <h1>SPRING 2022 PUPPIES</h1>
+                </div>
+                
+            </div>
+            
+        </section>
+        <section class="features features-main">
+            <div class="container grid grid-3">
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-12.jpg" alt="blue french bulldogpuppy">
+                    <p>Black and Tan Fully-Suited, Male</p>
+                    <h3>available</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-06.jpg" alt="blue fawn french bulldogpuppy">
+                    <p>Sable Fawn w/Black Mask, Male</p>
+                    <h3>available</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-03.jpg" alt="blue merle french bulldogpuppy">
+                    <p>Blue and Tan Fully-Suited, Male, brown collar</p>
+                    <h3>available</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-18.jpg" alt="lilac merle french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-14.jpg" alt="lilac merle french bulldogpuppy">
+                    <div class="sold">SOLD</div>
+                    <p>Black and Tan Fully-Suited, Female</p>
+                    <h3>SOLD, Las Vegas, NV</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-18.jpg" alt="lilac merle french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-14.jpg" alt="lilac merle french bulldogpuppy">
+                    <div class="sold">SOLD</div>
+                    <p>Blue and Tan Fully-Suited, Male</p>
+                    <h3>SOLD, Philadelphia, PA</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-02.jpg" alt=" merle french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-01.jpg" alt=" merle french bulldogpuppy">
+                    <div class="sold">SOLD</div>
+                    <p>Merle,  Male </p>
+                    <h3>SOLD, Portland, OR</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-02.jpg" alt=" merle french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-01.jpg" alt=" merle french bulldogpuppy">
+                    <div class="sold">SOLD</div>
+                    <p>Merle Pied, Female</p>
+                    <h3>SOLD, DFW, TX </h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-02.jpg" alt=" merle french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-01.jpg" alt=" merle french bulldogpuppy">
+                    <div class="sold">SOLD</div>
+                    <p>Blue Solid, Female</p>
+                    <h3>SOLD, Nashville, TN</h3>
+                </div>
+            </div>
+        </section>
+
         <!-- photos of puppies -->
+        <section class="showcase">
+            <div class="container grid">
+                <div class="showcase-text">
+                    <h1>November 2021 Litters</h1>
+                </div>
+            </div>
+        </section>
         <section class="features features-main">
             <div class="container grid grid-3">
                 <div class="card flex puppy">
                     <img src="images/puppies/blue male1.jpg" alt="blue french bulldogpuppy">
-                    <img src="images/puppies/blue male2.jpeg" alt="blue french bulldogpuppy">
-                    <img src="images/puppies/blue male3.jpeg" alt="blue french bulldogpuppy">
                     <div class="sold">SOLD</div>
                     <p>Micro Blue with brindle paws, Male, red collar</p>
                     <h3>SOLD, Kaufman, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/blue fawn 2.jpeg" alt="blue fawn french bulldogpuppy">
-                    <img src="images/puppies/blue fawn.jpeg" alt="blue fawn french bulldogpuppy">
-                    <img src="images/puppies/blue fawn 3.jpeg" alt="blue fawn french bulldogpuppy">
                     <div class="sold">SOLD</div>
                     <p>Micro Blue Fawn, Male, hearts collar</p>
                     <h3>SOLD, Kaufman, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/merle brown 1.jpg" alt="blue merle french bulldogpuppy">
-                    <img src="images/puppies/blue tan merle.jpeg" alt="blue merle french bulldogpuppy">
-                    <img src="images/puppies/blue tan merle2.jpeg" alt="blue merle french bulldogpuppy">
                     <div class="sold">SOLD</div>
                     <p>Blue Merle Tan Points, Male, brown collar</p>
                     <h3>SOLD, Alvarado, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/merle green 1.jpg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle green 2.jpg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle green 2.jpeg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle green.jpeg" alt="lilac merle french bulldogpuppy">
                     <div class="sold">SOLD</div>
                     <p>Lilac Brindle Merle, Male, green collar</p>
                     <h3>SOLD, Arlington, TX</h3>
                 </div>
                 <div class="card flex puppy">
-                    <img src="images/puppies/merle yellow 2.jpg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle yellow 1.jpeg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle yellow 2.jpeg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle male yellow.jpeg" alt="lilac merle french bulldogpuppy"><div class="sold">SOLD</div>
+                    <img src="images/puppies/merle yellow 2.jpg" alt="lilac merle french bulldogpuppy"><div class="sold">SOLD</div>
                     <p>Lilac Brindle Merle, Male, yellow collar</p>
                     <h3>SOLD, Mesquite, TX</h3>
                 </div>
                 <div class="card flex puppy">
-                    <img src="images/puppies/merle white 1.jpg" alt=" merle french bulldogpuppy">
-                    <img src="images/puppies/blue merle 1.jpeg" alt=" merle french bulldogpuppy">
-                    <img src="images/puppies/blue merle 2.jpeg" alt=" merle french bulldogpuppy">
-                    <img src="images/puppies/blue merle 3.jpeg" alt=" merle french bulldogpuppy"><div class="sold">SOLD</div>
+                    <img src="images/puppies/merle white 1.jpg" alt=" merle french bulldogpuppy"><div class="sold">SOLD</div>
                     <p>Marble Merle Tan points, Male, no collar</p>
                     <h3>SOLD, Mesquite, TX</h3>
                 </div>
                 <div class="card flex puppy">
-                    <img src="images/puppies/merle blue 1.jpg" alt="lilac merle french bulldogpuppy">
-                    <img src="images/puppies/merle blue 2.jpg" alt="lilac merle french bulldogpuppy"><div class="sold">SOLD</div>
+                    <img src="images/puppies/merle blue 1.jpg" alt="lilac merle french bulldogpuppy"><div class="sold">SOLD</div>
                     <p>Lilac Brindle Merle, Male, blue collar</p>
                     <h3>SOLD, Omaha, NE</h3>
                 </div>
                 <div class="card flex puppy">
-                    <img src="images/puppies/blue forest 1.jpg" alt="blue french bulldogpuppy">
-                    <img src="images/puppies/blue forest 2.jpg" alt="blue french bulldogpuppy"><div class="sold">SOLD</div>
+                    <img src="images/puppies/blue forest 1.jpg" alt="blue french bulldogpuppy"><div class="sold">SOLD</div>
                     <p>Blue brindle, Male, forest collar</p>
                     <h3>SOLD, Portland, OR</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/lilac purple 1.jpg" alt="lilac and tan french bulldogpuppy">
-                    <img src="images/puppies/lilac purple 2.jpg" alt="lilac and tan french bulldogpuppy"><div class="sold">SOLD</div>
+                    <div class="sold">SOLD</div>
                     <p>Micro Lilac and Tan, Male, purple collar</p>
                     <h3>SOLD, Mckinney, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/lilac female 1.jpg" alt="lilac and tan french bulldogpuppy">
-                    <img src="images/puppies/lilac female 2.jpg" alt="lilac and tan french bulldogpuppy"><div class="sold">SOLD</div>
+                    <div class="sold">SOLD</div>
                     <p>Lilac and Tan, Female, no collar</p>
                     <h3>SOLD, Kansas City, MO</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/winston 1.jpg" alt="Blue and tan french bulldogpuppy">
-                    <img src="images/puppies/winston 2.jpg" alt="Blue and tan french bulldogpuppy"><div class="sold">SOLD</div>
+                    <div class="sold">SOLD</div>
                     <p>Micro Blue and Tan, Male, orange collar</p>
                     <h3>SOLD, Austin, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/puppies/nala 1.jpg" alt="Blue and tan french bulldogpuppy">
-                    <img src="images/puppies/nala 2.jpg" alt="Blue and tan french bulldogpuppy"><div class="sold">SOLD</div>
+                    <div class="sold">SOLD</div>
                     <p>Micro Blue and Tan, Female, pink collar</p>
                     <h3>SOLD, New Orleans, LA</h3>
                 </div>
