--- a/puppies.html
+++ b/puppies.html
@@ -38,8 +38,9 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">Puppies</h1>
-                    <p class="lead"> Elvira welped a litter of three pups late March, and Olga had five two weeks later. As usual, all three females were reserved the day they were born. Of the five males, only three are left. 
-                       </p> Olivia, Fraulein and Borgia have dates with our stud, Jerbear, this week, making the new litters due at the end of June.</p>
+                    <p class="lead"> April 27th: Elvira welped a litter of three pups late March, and Olga had five two weeks later. As usual, all three females were reserved the day they were born. Of the five males, only three are left. 
+                       </p> Olivia, Fraulein and Borgia have dates with our stud, Jerbear, this week, making the new litters due at the end of June.
+                    </p> <p>April 28th: Well one day later and we only have the blue and tan male available.</p>
                 </div>
                 <div class="card"><img src="images/pups04/AprilPups-14.jpg" alt="litter of pups">
                 </div>
@@ -60,19 +61,21 @@
         <section class="features features-main">
             <div class="container grid grid-3">
                 <div class="card flex puppy">
-                    <img src="images/pups04/AprilPups-12.jpg" alt="blue french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-03.jpg" alt="blue and tan french bulldogpuppy">
+                    <p>Blue and Tan Fully-Suited, Male</p>
+                    <h3>available</h3>
+                </div>
+                <div class="card flex puppy">
+                    <img src="images/pups04/AprilPups-12.jpg" alt="Black and Tan french bulldogpuppy">
+                    <div class="sold">SOLD</div>
                     <p>Black and Tan Fully-Suited, Male</p>
-                    <h3>available</h3>
+                    <h3>SOLD, Wichita Falls, TX</h3>
                 </div>
                 <div class="card flex puppy">
-                    <img src="images/pups04/AprilPups-06.jpg" alt="blue fawn french bulldogpuppy">
+                    <img src="images/pups04/AprilPups-06.jpg" alt="Sable fawn french bulldogpuppy">
+                    <div class="sold">SOLD</div>
                     <p>Sable Fawn w/Black Mask, Male</p>
-                    <h3>available</h3>
-                </div>
-                <div class="card flex puppy">
-                    <img src="images/pups04/AprilPups-03.jpg" alt="blue merle french bulldogpuppy">
-                    <p>Blue and Tan Fully-Suited, Male, brown collar</p>
-                    <h3>available</h3>
+                    <h3>SOLD, Dallas, TX</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/pups04/AprilPups-18.jpg" alt="lilac merle french bulldogpuppy">
