Update puppy page

--- a/puppies.html
+++ b/puppies.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="css/style.css">
     <title>LaBear | Designer French Bulldogs</title>
     <meta name="keywords" content="French Bulldog Puppies Exotic Colors">
-    <meta name="description" content="Our newest litters of French Bulldog Puppies are here! Blue and tan, black and tan and sable still available in this litter.">
+    <meta name="description" content="Our newest litters of French Bulldog Puppies. Lilac Blue Sable Fawn Merle. We deliver all over USA">
 </head>
 
 <body>
@@ -38,9 +38,9 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">Puppies</h1>
-                    <p class="lead"> April 27th: Elvira welped a litter of three pups late March, and Olga had five two weeks later. As usual, all three females were reserved the day they were born. Of the five males, only three are left. 
-                       </p> Olivia, Fraulein and Borgia have dates with our stud, Jerbear, this week, making the new litters due at the end of June.
-                    </p> <p>April 28th: Well one day later and we only have the blue and tan male available.</p>
+                    <p class="lead"> April 29th: We are thrilled that all of our current litters of puppies have found awesome homes! 
+                Olivia, Fraulein and Borgia had dates with our stud, Jerbear, this week, and we are expecting the new litters at the end of June.
+                    </p>
                 </div>
                 <div class="card"><img src="images/pups04/AprilPups-14.jpg" alt="litter of pups">
                 </div>
@@ -63,7 +63,8 @@
                 <div class="card flex puppy">
                     <img src="images/pups04/AprilPups-03.jpg" alt="blue and tan french bulldogpuppy">
                     <p>Blue and Tan Fully-Suited, Male</p>
-                    <h3>available</h3>
+                    <div class="sold">SOLD</div>
+                    <h3>SOLD, Los Angeles, CA</h3>
                 </div>
                 <div class="card flex puppy">
                     <img src="images/pups04/AprilPups-12.jpg" alt="Black and Tan french bulldogpuppy">
