--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         </div>
 
     </div>
-    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br>New Puppies
-        March 22nd!</h2>
+    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br>New Puppies in
+        Late June</h2>
     <!-- SHOWTIME -->
     <section class="showtime">
         <div class="video-container">
@@ -54,7 +54,7 @@
                 <h1>We're Frenchie Fanatics, Y'all!</h1>
                 <p>We breed fabulous, spoiled-ass French Bulldogs right in our home.
                     We're obsessed with breeding the most gorgeous, healthy frenchies from top-tier pedigrees with
-                    beautiful 'exotic' coat colors. Located in Dallas, TX we hand-deliver our puppies across the U.S.A.
+                    beautiful 'exotic' coat colors. Located in Dallas, TX, we hand-deliver our puppies across the U.S.A.
                 </p>
                 <a href="puppies.html" class="btn btn-complementary">Frenchie Me</a>
             </div>
