--- a/stud.html
+++ b/stud.html
@@ -10,9 +10,9 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>LaBear | Designer French Bulldogs</title>
-    <meta name="keywords" content="French Bulldog Puppies">
-    <meta name="description" content="Home-raised exotic French Bulldog Puppies hand delivered to you">
+    <title>LaBear | Chocolate French Bulldog Studs</title>
+    <meta name="keywords" content="French Bulldog Studs">
+    <meta name="description" content="French Bulldog Chocolates Studs: Rojo Testable Chocolate, Cocoa, and Chocolate Fluffy Studs">
 </head>
 
 <body>
@@ -38,12 +38,12 @@
         <section class=" bg-primary py-3">
             <div class="container grid">
                 <div>
-                    <h1 class="xl">Total Stud</h1>
-                    <p class="lead">Lilac & Tan & White fully suited tri-color, European Pedigree, double coco</p>
+                    <h1 class="xl">La Bear's Chocolate Shop</h1>
+                    <p class="lead"> Our Studs Cover the Chocolate Frenchie Spectrum, from Lilac to Rojo to Original Shade Chocolate</p>
                 </div>
-                <div class="card">
-                <img src="images/jerbear9sm.png" alt="lilac&tan french bulldog"></div>
-            </div>
+                <!-- <div class="card">
+                <img src="images/jerbear9sm.png" alt="lilac and tan double cocoa french bulldog"></div>
+            </div> -->
         </section>
 
         <section class="docs-main bg-my-4">
@@ -51,12 +51,13 @@
 
                 <div class="card bg-light p-3">
 
-                    <h3 class="my-2">Essentials</h3>
+                    <h3 class="my-2">Jer Beau Bear</h3>
                     <nav>
                         <ul>
-                            <li><a class="text-primary" href="#">Lilac coat, full Tan points</a></li>
-                            <li><a href="#">Double recessive Cocoa </a></li>
-                            <li><a href="#">Double recesive Dilution and Intensity (New!)</a></li>
+                            <li><a class="text-primary" href="#">Lilac with fully-suited Tan points, tri-color</a></li>
+                            <li><a href="#">Double recessive Cocoa (coco)</a></li>
+                            <li><a href="#">Double recesive Dilution (dd) and Intensity (ii)</a></li>
+                            <li><a href="#">Sired by Neuburo Nitro, Owner Ashleigh Brookes</a></li>
                         </ul>
                     </nav>
 
@@ -71,17 +72,75 @@
 
                 <div class="card">
                     <h2>Jer Beau Bear</h2>
-                    <p>14 months old, 22lbs, big head, classic thick bulldog musculature. European
-                        Imported Pedigree. One of 12 littermates, first litter that he sired he threw 8 pups. BOOK NOW! Limited breedings lots available.</p>
-                    <h3>VGL DNA: atat, coco, BB, dd, EmEm, no Ky, no S, double recessive new Intensity gene</h3>
-                    <img src="images/jerbearsm.png" alt="lilac&tan french bulldog">
-                    <img src="images/jerbear3sm.png" alt="lilac&tan french bulldog">
-                    <img src="images/jerbear8sm.png" alt="lilac&tan french bulldog">
-                    <img src="images/jerbear7sm.png" alt="lilac&tan french bulldog">
-                    
+                    <img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog">
+                    <img src="images/Stud/Jerbear-2.jpg" alt="lilac and tan french bulldog">
 
-            
+                </div>
+            </div>
+            <div class="container grid">
 
+                <div class="card bg-light p-3">
+
+                    <h3 class="my-2">LaBear's Romeo Rojo</h3>
+                    <nav>
+                        <ul>
+                            <li><a class="text-primary" href="#">Rojo Chocolate Merle </a></li>
+                            <li><a href="#">Double Recessive Testable Chocolate (bb) </a></li>
+                            <li><a href="#">Carries Cocoa (Coco)</a></li>
+                            <li><a href="#">Four Panel Clear</a></li>
+                            <li><a href="#">Sired by Mr. Gore</a></li>
+                        </ul>
+                    </nav>
+
+                    <h3 class="my-2">Stud Fee</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="#">$4500</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="card">
+                    <h2>LaBear's Romeo Rojo</h2>
+                    <h3>Limited Breeding Only; next open on July 24th, 2022</h3>
+                    <img src="images/Stud/Romeo-1.jpg" alt="rojo chocolate merle french bulldog">
+                    <img src="images/Stud/Romeo-2.jpg" alt="rojo chocolate merle french bulldog">
+                    <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog">
+
+                </div>
+            </div>
+            <div class="container grid">
+
+                <div class="card bg-light p-3">
+
+                    <h3 class="my-2">LaBear's Belgian Chocolate</h3>
+                    <nav>
+                        <ul>
+                            <li><a class="text-primary" href="#">Visual Fluffy, Carries one L4</a></li>
+                            <li><a href="#">Double recessive Cocoa (coco) </a></li>
+                            <li><a href="#">Carries Testable Chocoloate (Bb) </a></li>
+                            <li><a href="#">Four Panel Clear</a></li>
+                        </ul>
+                    </nav>
+
+                    <h3 class="my-2">Stud Fee</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="#">$5500</a></li>
+                        </ul>
+                    </nav>
+
+                </div>
+
+                <div class="card">
+                    <h2>LaBear's Belgian Chocolate</h2>
+                    <h3>Will begin very limited breeding in October, 2022</h3>
+                    <img src="images/Stud/Ferrero-1.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferrero-2.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferrero-3.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferrero-4.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferrero.jpg" alt="chocolate fluffy french bulldog">
                 </div>
             </div>
         </section>
