Pupdate for June Litters

--- a/puppies.html
+++ b/puppies.html
@@ -37,11 +37,13 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies</h1>
-                <p class="lead"> May 19th:
-            Olivia, Fraulein and Borgia all had dates with our stud, Jerbear, the last week of April, and we are expecting three new litters at the end of June.
+                <p class="lead"> June 30th:
+            Olivia & Fraulein gave birth to two gorgeous, healthy litters this week. Six girls and four boys. Borgia is at the vet today!
                 </p>
             </div>
             <div class="container grid">
+                <div class="card puppy"><img src="images/FrauLitter622.jpg" alt="blue french bulldog">
+                </div>
                 <div class="card puppy"><img src="images/mamas/Mom-1.jpg" alt="blue french bulldog">
                 </div>
                 <div class="card puppy"><img src="images/mamas/Mom-2.jpg" alt="blue french bulldog">
