Update photos and G anaylitcs

--- a/about.html
+++ b/about.html
@@ -12,7 +12,15 @@
     <link rel="stylesheet" href="css/style.css">
     <title>La Bear Frenchies</title>
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2TG5FJKHNB');
+</script>
 <body>
  <!-- NAVBAR -->
  <div class="navbar">
