--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <meta name="description" content="Home-raised exotic French Bulldog Puppies hand delivered to you">
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-2TG5FJKHNB');
+</script>
+
 <body>
     <!-- NAVBAR -->
     <div class="navbar">
