--- a/puppies.html
+++ b/puppies.html
@@ -14,7 +14,15 @@
     <meta name="keywords" content="French Bulldog Puppies Exotic Colors">
     <meta name="description" content="Our newest litters of French Bulldog Puppies. Lilac Blue Sable Fawn Merle. We deliver all over USA">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2TG5FJKHNB');
+</script>
 <body>
     <!-- NAVBAR -->
     <div class="navbar">
@@ -37,8 +45,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies</h1>
-                <p class="lead"> June 30th:
-            Olivia & Fraulein gave birth to two gorgeous, healthy litters this week. Six girls and four boys. Borgia is at the vet today!
+                <p class="lead"> August 3rd: We have four puppies available, two girls and two boys. Scroll down to see updated photos of the pups.
                 </p>
             </div>
             <div class="container grid">
@@ -58,23 +65,30 @@
         <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">Our June '22 Puppies</h2>
-                    <p class="lead my-1"> We still have a few puppies available from our most recent litters. </p>
+                    <h2 class="lg">Available Boys</h2>
+                    <p class="lead my-1">  </p>
                 </div>
-                <img src="images/puppies/j22l/20220715_104320.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_110622.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_111028.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_111239.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_111252.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_111757.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_112020.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_112319.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_112944.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_113608.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_114137.jpg" alt="">
-                <img src="images/puppies/j22l/20220715_114634.jpg" alt="">
+                <img src="images/puppies/j22l/boys3.jpg" alt="">
+                <img src="images/puppies/j22l/brindleboy.jpg" alt="">
+                <img src="images/puppies/j22l/blueboy.jpg" alt="">
+                <img src="images/puppies/j22l/boys1.jpg" alt="">
+                <img src="images/puppies/j22l/boys2.jpg" alt="">
+                
             </div>
         </section>
+
+    </section>
+    <section class=" bg-light py-2">
+        <div class="container grid">
+            <div class="text-center">
+                <h2 class="lg">Available Girls</h2>
+                <p class="lead my-1">  </p>
+            </div>
+            <img src="images/puppies/j22l/bluegirl.jpg" alt="">
+            <img src="images/puppies/j22l/bluetangirl.jpg" alt="">
+            <img src="images/puppies/j22l/bluetangirl2.jpg" alt="">
+        </div>
+    </section>
 
         <!-- Sub head -->
         <section class="showcase-puppy">
