--- a/stud.html
+++ b/stud.html
@@ -14,7 +14,15 @@
     <meta name="keywords" content="French Bulldog Studs">
     <meta name="description" content="French Bulldog Chocolates Studs: Rojo Testable Chocolate, Cocoa, and Chocolate Fluffy Studs">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-2TG5FJKHNB');
+</script>
 <body>
     <!-- NAVBAR -->
     <div class="navbar">
