Update puppy pics

--- a/puppies.html
+++ b/puppies.html
@@ -45,7 +45,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies</h1>
-                <p class="lead"> August 3rd: We have four puppies available, two girls and two boys. Scroll down to see updated photos of the pups.
+                <p class="lead"> August 8th: We have three puppies available, two girls and one boy. Scroll down to see the pups.
                 </p>
             </div>
             <div class="container grid">
@@ -65,14 +65,12 @@
         <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
-                    <h2 class="lg">Available Boys</h2>
+                    <h2 class="lg">Blue Boy Available</h2>
                     <p class="lead my-1">  </p>
                 </div>
-                <img src="images/puppies/j22l/boys3.jpg" alt="">
-                <img src="images/puppies/j22l/brindleboy.jpg" alt="">
+                
                 <img src="images/puppies/j22l/blueboy.jpg" alt="">
-                <img src="images/puppies/j22l/boys1.jpg" alt="">
-                <img src="images/puppies/j22l/boys2.jpg" alt="">
+                <img src="images/puppies/j22l/blueboy2.jpg" alt="">
                 
             </div>
         </section>
@@ -81,12 +79,15 @@
     <section class=" bg-light py-2">
         <div class="container grid">
             <div class="text-center">
-                <h2 class="lg">Available Girls</h2>
+                <h2 class="lg">Available Girls: Blue & Tan, Blue</h2>
                 <p class="lead my-1">  </p>
             </div>
             <img src="images/puppies/j22l/bluegirl.jpg" alt="">
+            <img src="images/puppies/j22l/bluegirl1.jpg" alt="">
+            <img src="images/puppies/j22l/bluegirl3.jpg" alt="">
             <img src="images/puppies/j22l/bluetangirl.jpg" alt="">
             <img src="images/puppies/j22l/bluetangirl2.jpg" alt="">
+            <img src="images/puppies/j22l/bluetang1.jpg" alt="">
         </div>
     </section>
 
