--- a/puppies.html
+++ b/puppies.html
@@ -10,8 +10,8 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>LaBear | Designer French Bulldogs</title>
-    <meta name="keywords" content="French Bulldog Puppies Exotic Colors">
+    <title>LaBear | French Bulldogs Puppies</title>
+    <meta name="keywords" content="French Bulldog Puppies Available Now">
     <meta name="description" content="Our newest litters of French Bulldog Puppies. Lilac Blue Sable Fawn Merle. We deliver all over USA">
 </head>
 <!-- Google tag (gtag.js) -->
