Update About page title tag

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="css/utilities.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>LaBear | Designer French Bulldogs</title>
+    <title>LaBear | About Us</title>
     <meta name="keywords" content="French Bulldog Puppies">
     <meta name="description" content="Home-raised exotic French Bulldog Puppies hand delivered to you">
 </head>
