Update puppy page

--- a/puppies.html
+++ b/puppies.html
@@ -45,7 +45,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies</h1>
-                <p class="lead"> August 8th: We have three puppies available, two girls and one boy. Scroll down to see the pups.
+                <p class="lead"> August 14th: We do not currently have any puppies available.
                 </p>
             </div>
             <div class="container grid">
@@ -62,7 +62,7 @@
             </div>
 
         </section>
-        <section class="cloud bg-primary py-2">
+        <!-- <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
                     <h2 class="lg">Blue Boy Available</h2>
@@ -89,7 +89,7 @@
             <img src="images/puppies/j22l/bluetangirl2.jpg" alt="">
             <img src="images/puppies/j22l/bluetang1.jpg" alt="">
         </div>
-    </section>
+    </section> -->
 
         <!-- Sub head -->
         <section class="showcase-puppy">
