--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
 
     </div>
-    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br>New Puppies Just Born Week of June 25th</h2>
+    <h2 class="contact">email: LaBearFrenchies<i class="fas fa-at"></i>gmail.com | text: 214.861.7611</br></h2>
     <!-- SHOWTIME -->
     <section class="showtime">
         <div class="video-container">
