Readd former puppy litter photos

--- a/puppies.html
+++ b/puppies.html
@@ -131,7 +131,7 @@
         </section>
 
         <!-- photos of puppies -->
-        <!-- <section class="showcase-puppy">
+        <section class="showcase-puppy">
             <div class="container grid">
                 <div class="showcase-puppy-text">
                     <h1>November 2021 Litters</h1>
@@ -209,7 +209,7 @@
                     <h3>SOLD, New Orleans, LA</h3>
                 </div>
             </div>
-        </section> -->
+        </section>
 
         <!-- Parents -->
         <!-- <section class="features features-sub-head bg-secondary py-3">
