Update puppy and parent pics

--- a/index.html
+++ b/index.html
@@ -74,6 +74,24 @@
             </div>
         </div>
     </section>
+    <section class="features  bg-light py-3">
+        <div class="container p-5">
+            <h1 class="xl">COMING SOON</h1>
+            <p class="lead"> We are expecting a litter in mid Sept out of ZsaZsa LaBear, our dark Chocolate and Tan micro female, by Texas Frenchie Society's New Shade Isabella Merle Stud, Zeus.
+            </p>
+        </div>
+        <div class="container grid">
+            <div class="card puppy"><img src="images/mamas/ZsaZsa-1.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/mamas/ZsaZsa-2.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/zeus.jpeg" alt="blue french bulldog">
+            </div>
+        </div>
+        
+        </div>
+
+    </section>
 
     <!-- cli -->
     <section class="cli">
