--- a/puppies.html
+++ b/puppies.html
@@ -45,15 +45,15 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies</h1>
-                <p class="lead"> August 14th: We do not currently have any puppies available.
+                <p class="lead"> August 26th: Madison and Jerbear just had a litter of beautiful, healthy puppies.
                 </p>
             </div>
             <div class="container grid">
-                <div class="card puppy"><img src="images/FrauLitter622.jpg" alt="blue french bulldog">
+                <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
                 </div>
-                <div class="card puppy"><img src="images/mamas/Mom-1.jpg" alt="blue french bulldog">
+                <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue french bulldog">
                 </div>
-                <div class="card puppy"><img src="images/mamas/Mom-2.jpg" alt="blue french bulldog">
+                <div class="card puppy"><img src="images/jerbear.jpg" alt="blue french bulldog">
                 </div>
                 <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="blue french bulldog">
                 </div>
