Comment out changes for now

--- a/about.html
+++ b/about.html
@@ -52,7 +52,24 @@
             
         </div>
     </section>
+    <!---Showcase -->
+    <!-- <section class="showcase">
+        <div class="container grid">
+            <div class="showcase-text">
+                <h1>Happy Frenchies Make The Best Frenchies!</h1>
+                <p>We breed fabulous, spoiled-ass French Bulldogs right in our home.
+                    We're obsessed with breeding the most gorgeous, healthy frenchies from top-tier pedigrees with
+                    beautiful 'exotic' coat colors. Located in Dallas, TX, we hand-deliver our puppies across the U.S.A.
+                </p>
+                <a href="puppies.html" class="btn btn-complementary">Frenchie Me</a>
+            </div>
 
+            <div class="showcase-form card">
+                <img src="images/pool.JPG" alt="">
+
+            </div>
+        </div>
+    </section> -->
 
     
 
