Add slimshady to puppy page

--- a/puppies.html
+++ b/puppies.html
@@ -48,7 +48,7 @@
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
                 <p class="lead"> August 26th: Madison and Jerbear just had a litter of beautiful, healthy puppies. <br>
-                    August 30th: 2 Blue girls still available from Madison and Jerbear. We also have two merle fluffy-carrier boys available from Luna and Eminem.
+                    August 30th: 2 Blue girls still available from Madison and Jerbear. We also have two merle fluffy-carrier boys available from Luna, a black merle, and Slimshady, a lilac platinum fluffy carrier.
                 </p>
             </div>
             <div class="container grid">
@@ -73,9 +73,10 @@
                     <p class="lead my-1"> </p>
                 </div>
 
-                <img src="images/Luna/lunaboy1.jpg" alt="">
-                <img src="images/Luna/Lunaboy2.jpg" alt="">
-                <img src="images/Luna/Luna.jpg" alt="">
+                <img src="images/Luna/lunaboy1.jpg" alt="fluffy-carrier merle">
+                <img src="images/Luna/Lunaboy2.jpg" alt="fluffy-carrier merle">
+                <img src="images/Luna/Luna.jpg" alt="black merle frenchie">
+                <img src="images/Luna/slimshady.jpg" alt="lilac platinum fluffy Carrier">
             </div>
         </section>
 
