Add bandit feature to pup pg

--- a/puppies.html
+++ b/puppies.html
@@ -47,26 +47,31 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> August 26th: Madison and Jerbear just had a litter of beautiful, healthy puppies. <br>
-                    August 30th: 2 Blue girls still available from Madison and Jerbear. We also have two merle fluffy-carrier boys available from Luna, a black merle, and Slimshady, a lilac platinum fluffy carrier.
-                </p>
+                <p class="lead"> Sept 2nd: We have one blue brindle boy available.</p>
+                <img class="animated-gif" src="images/puppies/sum22/bandit1.gif" alt="">
             </div>
             <div class="container grid">
-                <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
+                <div class="card puppy"><img src="images/puppies/sum22/bandit1.jpg" alt="blue pied french bulldog">
+                </div><div class="card puppy"><img src="images/puppies/sum22/bandit2.jpg" alt="blue pied french bulldog">
+                </div><div class="card puppy"><img src="images/puppies/sum22/bandit3.jpg" alt="blue pied french bulldog">
+
+                </div><div class="card puppy"><img src="images/puppies/sum22/bandit4.jpg" alt="blue pied french bulldog">
+                </div>
+                <!-- <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
                 </div>
                 <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue french bulldog">
                 </div>
                 <div class="card puppy"><img src="images/jerbear.jpg" alt="blue french bulldog">
                 </div>
                 <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="blue french bulldog">
-                </div>
+                </div> -->
             </div>
 
             </div>
 
         </section>
         <!-- second puppy section -->
-        <section class="cloud bg-primary py-2">
+        <!-- <section class="cloud bg-primary py-2">
             <div class="container grid">
                 <div class="text-center">
                     <h2 class="lg">Two Fluffy Carrier Merle Boys Available</h2>
@@ -78,7 +83,7 @@
                 <img src="images/Luna/Luna.jpg" alt="black merle frenchie">
                 <img src="images/Luna/slimshady.jpg" alt="lilac platinum fluffy Carrier">
             </div>
-        </section>
+        </section> -->
 
         <!-- </section>
         <section class=" bg-light py-2">
