--- a/puppies.html
+++ b/puppies.html
@@ -47,7 +47,7 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Sept 2nd: We have one blue brindle boy available.</p>
+                <p class="lead"> Sept 6th: our blue brindle boy has found a home already.</p>
                 <img class="animated-gif" src="images/puppies/sum22/bandit1.gif" alt="">
             </div>
             <div class="container grid">
