Update new litter photos

--- a/puppies.html
+++ b/puppies.html
@@ -47,24 +47,26 @@
         <section class="features  bg-primary py-3">
             <div class="container p-5">
                 <h1 class="xl">Puppies Available NOW:</h1>
-                <p class="lead"> Sept 6th: our blue brindle boy has found a home already.</p>
-                <img class="animated-gif" src="images/puppies/sum22/bandit1.gif" alt="">
+                <p class="lead"> Sept 8th: We have girls & boys Available from two litters, both sired by Jer Bear's. Madison's were born Aug 25th and Aurora's Sept 7th.</p>
             </div>
             <div class="container grid">
-                <div class="card puppy"><img src="images/puppies/sum22/bandit1.jpg" alt="blue pied french bulldog">
-                </div><div class="card puppy"><img src="images/puppies/sum22/bandit2.jpg" alt="blue pied french bulldog">
-                </div><div class="card puppy"><img src="images/puppies/sum22/bandit3.jpg" alt="blue pied french bulldog">
-
-                </div><div class="card puppy"><img src="images/puppies/sum22/bandit4.jpg" alt="blue pied french bulldog">
+                <div class="card puppy"><img src="images/mamas/auroramad.jpg" alt="blue fawn and blue pied french bulldog">
                 </div>
-                <!-- <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
+                <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue pied french bulldog">
                 </div>
-                <div class="card puppy"><img src="images/mamas/madison-2.jpg" alt="blue french bulldog">
+                <div class="card puppy"><img src="images/mamas/aurora.jpg" alt="blue fawn french bulldog">
                 </div>
-                <div class="card puppy"><img src="images/jerbear.jpg" alt="blue french bulldog">
+                <div class="card puppy"><img src="images/puppies/sum22/aurlitter.jpg" alt="litter of french bulldogs">
                 </div>
-                <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="blue french bulldog">
-                </div> -->
+                <div class="card puppy"><img src="images/puppies/sum22/aurlitter1.jpg" alt="litter of french bulldogs">
+                </div>
+                <div class="card puppy"><img src="images/mamas/madison1.jpg" alt="blue pied french bulldog">
+                </div>
+                <div class="card puppy"><img src="images/Jerbear-3.jpg" alt="lilac and tan french bulldog stud">
+                </div>
+                <div class="card puppy"><img src="images/Stud/Jerbear-1.jpg" alt="lilac and tan french bulldog stud">
+                </div>
+                
             </div>
 
             </div>
