Update Stud page

--- a/stud.html
+++ b/stud.html
@@ -12,17 +12,19 @@
     <link rel="stylesheet" href="css/style.css">
     <title>LaBear | Chocolate French Bulldog Studs</title>
     <meta name="keywords" content="French Bulldog Studs">
-    <meta name="description" content="French Bulldog Chocolates Studs: Rojo Testable Chocolate, Cocoa, and Chocolate Fluffy Studs">
+    <meta name="description"
+        content="French Bulldog Chocolates Studs: Rojo Testable Chocolate, Cocoa, and Chocolate Fluffy Studs">
 </head>
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-2TG5FJKHNB"></script>
 <script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-  gtag('config', 'G-2TG5FJKHNB');
+    gtag('config', 'G-2TG5FJKHNB');
 </script>
+
 <body>
     <!-- NAVBAR -->
     <div class="navbar">
@@ -47,11 +49,22 @@
             <div class="container grid">
                 <div>
                     <h1 class="xl">La Bear's Chocolate Shop</h1>
-                    <p class="lead"> Our Studs Cover the Chocolate Frenchie Spectrum, from Lilac to Rojo to Original Shade Chocolate</p>
+                    <p class="lead"> LaBear Frenchies is pleased to offer a lock-in special for our Rojo Chocolate Merle
+                        Stud ROMEO, a homozygous testable chocolate sired by MrGore. He's ready to work now. VERY
+                        limited intro offer - $2,500 stud fee, 1st come 1st served. Contact us now for lock-in options!
+                        Fall '22 ONLY.
+                    </p>
                 </div>
-                <!-- <div class="card">
-                <img src="images/jerbear9sm.png" alt="lilac and tan double cocoa french bulldog"></div>
-            </div> -->
+                <div class="card">
+                    <img src="images/Stud/romeoStudCard.jpg" alt="lilac and tan double cocoa french bulldog">
+                </div>
+                <div class="card">
+                    <img src="images/Stud/romeo-3.jpg" alt="lilac and tan double cocoa french bulldog">
+                </div>
+                <div class="card">
+                    <img src="images/Stud/romeo-4.jpg" alt="lilac and tan double cocoa french bulldog">
+                </div>
+            </div>
         </section>
 
         <section class="docs-main bg-my-4">
@@ -103,7 +116,7 @@
                     <h3 class="my-2">Stud Fee</h3>
                     <nav>
                         <ul>
-                            <li><a href="#">$4500</a></li>
+                            <li><a href="#">$5000</a></li>
                         </ul>
                     </nav>
 
@@ -112,7 +125,7 @@
                 <div class="card">
                     <h2>LaBear's Romeo Rojo</h2>
                     <h3>Limited Breeding Only; next open on July 24th, 2022</h3>
-                    <img src="images/Stud/Romeo-1.jpg" alt="rojo chocolate merle french bulldog">
+                    <img src="images/Stud/romeoStudCard.jpg" alt="rojo chocolate merle french bulldog">
                     <img src="images/Stud/Romeo-2.jpg" alt="rojo chocolate merle french bulldog">
                     <img src="images/Stud/Romeo.jpg" alt="rojo chocolate merle french bulldog">
 
@@ -135,7 +148,7 @@
                     <h3 class="my-2">Stud Fee</h3>
                     <nav>
                         <ul>
-                            <li><a href="#">$5500</a></li>
+                            <li><a href="#">inquire for price</a></li>
                         </ul>
                     </nav>
 
@@ -144,11 +157,11 @@
                 <div class="card">
                     <h2>LaBear's Belgian Chocolate</h2>
                     <h3>Will begin very limited breeding in October, 2022</h3>
-                    <img src="images/Stud/Ferrero-1.jpg" alt="chocolate fluffy french bulldog">
-                    <img src="images/Stud/Ferrero-2.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferr-1.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferr-2.jpg" alt="chocolate fluffy french bulldog">
                     <img src="images/Stud/Ferrero-3.jpg" alt="chocolate fluffy french bulldog">
-                    <img src="images/Stud/Ferrero-4.jpg" alt="chocolate fluffy french bulldog">
-                    <img src="images/Stud/Ferrero.jpg" alt="chocolate fluffy french bulldog">
+                    <img src="images/Stud/Ferr-3.jpg" alt="chocolate fluffy french bulldog">
+                   
                 </div>
             </div>
         </section>
