Add zsa choco litter pics

--- a/index.html
+++ b/index.html
@@ -76,16 +76,20 @@
     </section>
     <section class="features  bg-light py-3">
         <div class="container p-5">
-            <h1 class="xl">COMING SOON</h1>
-            <p class="lead"> We are expecting a litter in mid Sept out of ZsaZsa LaBear, our dark Chocolate and Tan micro female, by Texas Frenchie Society's New Shade Isabella Merle Stud, Zeus.
+            <h1 class="xl">CHOCOLATE Frenchies ARE HERE</h1>
+            <p class="lead"> On Sept 9th our ZsaZsa LaBear, a dark Chocolate and Tan micro female, had a beautiful litter of different chocolate pups by Texas Frenchie Society's New Shade Isabella Merle Stud, Zeus. Chocolate Fawn, Choclate and Tan, Chocolate Merles and a Lilac -- all with 1 copy testable chocolate and 2 copies cocoa.
             </p>
         </div>
         <div class="container grid">
-            <div class="card puppy"><img src="images/mamas/ZsaZsa-1.jpg" alt="dark chocolate french bulldog">
-            </div>
             <div class="card puppy"><img src="images/mamas/ZsaZsa-2.jpg" alt="dark chocolate french bulldog">
             </div>
             <div class="card puppy"><img src="images/zeus.jpeg" alt="blue french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-1.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-2.jpg" alt="dark chocolate french bulldog">
+            </div>
+            <div class="card puppy"><img src="images/puppies/sum22/zsalitter-3.jpg" alt="dark chocolate french bulldog">
             </div>
         </div>
         
