--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     </section>
     <section class="features  bg-light py-3">
         <div class="container p-5">
-            <h1 class="xl">CHOCOLATE Frenchies ARE HERE</h1>
+            <h1 class="xl">CHOCOLATES ARE HERE</h1>
             <p class="lead"> On Sept 9th our ZsaZsa LaBear, a dark Chocolate and Tan micro female, had a beautiful litter of different chocolate pups by Texas Frenchie Society's New Shade Isabella Merle Stud, Zeus. Chocolate Fawn, Choclate and Tan, Chocolate Merles and a Lilac -- all with 1 copy testable chocolate and 2 copies cocoa.
             </p>
         </div>
